# file_manager

./: .gitignore  README.md  config.py  requirements.txt  run.py
FileManagerAPI/: CMakeLists.txt  FileManagerAPI.hpp  README.md  TripleDESDecryptor.hpp  TripleDESExample.cpp  main.cpp
app/: __init__.py  models.py
app/routes/: __init__.py  admin_routes.py  api_routes.py  auth_routes.py  file_routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/admin/: _pagination.html  categories.html  create_key.html  create_user.html  edit_key.html  edit_user.html  extensions.html  index.html  keys.html  setup.html  users.html
app/templates/auth/: login.html  profile.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/file/: details.html  edit.html  index.html  upload.html
app/utils/: __init__.py  crypto.py  validators.py
